--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -125,7 +125,7 @@ jobs:
         run: mkdir -p bin/mac && mv opengrep-osx-arm64/* bin/mac/
 
       - name: List Contents of bin/mac (Non-Recursive)
-        run: ls bin/mac
+        run: ls bin/mac/artifacts
 
       - name: Rename opengrep to opengrep-cli
         run: mv bin/mac/opengrep bin/mac/opengrep-cli
