--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -122,13 +122,13 @@ jobs:
         run: ls -R opengrep-osx-arm64
 
       - name: Move content to bin/mac
-        run: mkdir -p bin/mac && mv opengrep-osx-arm64/* bin/mac/
+        run: mkdir -p bin/mac && mv opengrep-osx-arm64/artifacts/* bin/mac/
 
       - name: List Contents of bin/mac (Non-Recursive)
-        run: ls bin/mac/artifacts
+        run: ls bin/mac
 
       - name: Rename opengrep to opengrep-cli
-        run: mv bin/mac/opengrep bin/mac/opengrep-cli
+        run: mv bin/mac/opengrep-core bin/mac/opengrep-cli
 
       - name: Show Contents of bin/mac
         run: ls -R bin/mac
