--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -42,16 +42,16 @@ jobs:
         id: get-run-id
         run: |
           # Fetch the latest successful run ID for the workflow
-          RUN_ID=$(gh run list --repo opengrep/opengrep --workflow rolling-release --status success --limit 1 --json databaseId --jq '.[0].databaseId')
-          echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
+          $RUN_ID = gh run list --repo opengrep/opengrep --workflow rolling-release --status success --limit 1 --json databaseId --jq '.[0].databaseId'
+          echo "run_id=$RUN_ID" >> $env:GITHUB_ENV
 
       - name: Output Run ID
         run: |
-          echo "The latest successful run ID is: ${{ steps.get-run-id.outputs.run_id }}"
+          echo "The latest successful run ID is: ${{ env.run_id }}"
       
       - name: Download Artifact
         run: |
-          gh run download ${{ steps.get-run-id.outputs.run_id }} \
+          gh run download ${{ env.run_id }} \
             -R opengrep/opengrep -n opengrep-core-and-dependent-libs-w64-artifact
         
       - name: Unzip opengrep-core-and-dependent-libs-w64-artifact
