playground version for testing elixir
Signed-off-by: matthiasgekiere <matthias.gekiere@codekt.be>

--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -3,7 +3,12 @@ name: Rolling Release Opengrep Playground App
 on:
   push:
     branches:
-      - main    
+      - main   
+      
+  # TESTING ONLY
+  pull_request:
+    branches:
+      - main
       
   workflow_dispatch:
     inputs:
@@ -38,8 +43,8 @@ jobs:
         id: get-run-id
         run: |
           # Fetch the latest successful run ID for the workflow
-          $RUN_ID = gh run list --repo opengrep/opengrep --workflow rolling-release --status success --limit 1 --json databaseId --jq '.[0].databaseId'
-          echo "run_id=$RUN_ID" >> $env:GITHUB_ENV
+          # $RUN_ID = gh run list --repo opengrep/opengrep --workflow rolling-release --status success --limit 1 --json databaseId --jq '.[0].databaseId'
+          echo "run_id=14066735207" >> $env:GITHUB_ENV
 
       - name: Output Run ID
         run: |
