--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main   
-      
+
   # TESTING ONLY
   pull_request:
     branches:
@@ -97,8 +97,8 @@ jobs:
         id: get-run-id
         run: |
           # Fetch the latest successful run ID for the workflow
-          RUN_ID=$(gh run list --repo opengrep/opengrep --workflow rolling-release --status success --limit 1 --json databaseId --jq '.[0].databaseId')
-          echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
+          # RUN_ID=$(gh run list --repo opengrep/opengrep --workflow rolling-release --status success --limit 1 --json databaseId --jq '.[0].databaseId')
+          echo "run_id=14066735207" >> $GITHUB_OUTPUT
 
       - name: Output Run ID
         run: |
@@ -161,8 +161,8 @@ jobs:
         id: get-run-id
         run: |
           # Fetch the latest successful run ID for the workflow
-          RUN_ID=$(gh run list --repo opengrep/opengrep --workflow rolling-release --status success --limit 1 --json databaseId --jq '.[0].databaseId')
-          echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
+          # RUN_ID=$(gh run list --repo opengrep/opengrep --workflow rolling-release --status success --limit 1 --json databaseId --jq '.[0].databaseId')
+          echo "run_id=14066735207" >> $GITHUB_OUTPUT
 
       - name: Output Run ID
         run: |
