--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@electron-forge/plugin-vite": "^7.6.1",
     "@electron/fuses": "^1.8.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "electron": "34.2.0",
+    "electron": "40.0.0",
     "sass-embedded": "^1.85.0",
     "vite": "^5.4.14"
   },
@@ -38,7 +38,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@guolao/vue-monaco-editor": "^1.5.4",
     "electron-squirrel-startup": "^1.0.1",
-    "js-yaml": "^4.1.0",
+    "js-yaml": "4.1.1",
     "monaco-yaml": "^5.3.1",
     "vue": "^3.5.13"
   }
