--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4
         with:
-          node-version: ">=20"
+          node-version: 22
 
       - name: Install Dependencies
         run: npm ci
@@ -79,7 +79,7 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4
         with:
-          node-version: ">=20"
+          node-version: 22
 
       - name: Install Dependencies
         run: npm ci
@@ -140,7 +140,7 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4
         with:
-          node-version: ">=20"
+          node-version: 22
 
       - name: Install Dependencies
         run: npm ci
