--- a/.github/workflows/rolling-release.yaml
+++ b/.github/workflows/rolling-release.yaml
@@ -62,7 +62,20 @@ jobs:
         run: ls -R bin/windows
 
       - name: Build for Windows
-        run: npm run make-win || exit 1
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Continue"
+          npm run make-win 2>&1 | Tee-Object -FilePath build-output.log
+          $exitCode = $LASTEXITCODE
+          $output = Get-Content build-output.log -Raw -ErrorAction SilentlyContinue
+          if ($output -match "FATAL ERROR: Ineffective mark-compacts|JavaScript heap out of memory|Allocation failed") {
+            Write-Host "::error::JavaScript heap out of memory error detected"
+            exit 1
+          }
+          if ($exitCode -ne 0) {
+            Write-Host "::error::Build failed with exit code $exitCode"
+            exit $exitCode
+          }
 
       - name: Upload Windows Artifacts (ZIP)
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4
@@ -117,7 +130,19 @@ jobs:
         run: ls -R bin/macos
 
       - name: Build for macOS
-        run: npm run make-mac || exit 1
+        run: |
+          set +e
+          npm run make-mac 2>&1 | tee build-output.log
+          EXIT_CODE=${PIPESTATUS[0]}
+          set -e
+          if grep -q "FATAL ERROR: Ineffective mark-compacts\|JavaScript heap out of memory\|Allocation failed" build-output.log; then
+            echo "::error::JavaScript heap out of memory error detected"
+            exit 1
+          fi
+          if [ $EXIT_CODE -ne 0 ]; then
+            echo "::error::Build failed with exit code $EXIT_CODE"
+            exit $EXIT_CODE
+          fi
 
       - name: Upload macOS DMG
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4
@@ -181,7 +206,19 @@ jobs:
         run: ls -R bin/linux
 
       - name: Build for Linux
-        run: npm run make-linux || exit 1
+        run: |
+          set +e
+          npm run make-linux 2>&1 | tee build-output.log
+          EXIT_CODE=${PIPESTATUS[0]}
+          set -e
+          if grep -q "FATAL ERROR: Ineffective mark-compacts\|JavaScript heap out of memory\|Allocation failed" build-output.log; then
+            echo "::error::JavaScript heap out of memory error detected"
+            exit 1
+          fi
+          if [ $EXIT_CODE -ne 0 ]; then
+            echo "::error::Build failed with exit code $EXIT_CODE"
+            exit $EXIT_CODE
+          fi
 
       - name: Upload Linux DEB
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4
